--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,12 +1,9 @@
-# powerline daemon
-run-shell "powerline-daemon -q"
 # enable OSX clipboard sharing
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # tmux configuration file
-source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
-source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline_tmux_1.8_plus.conf
-source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline_tmux_1.9_plus.conf
+# source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+source /Users/bivers/dotfiles/tmux/tmux_airline.conf
 
 # Set 256-color terminal
 set -g default-terminal "screen-256color"
