--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,8 +2,8 @@
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # tmux configuration file
-# source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
-source /Users/bivers/dotfiles/tmux/tmux_airline.conf
+source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+# source /Users/bivers/dotfiles/tmux/tmux_airline.conf
 
 # Set 256-color terminal
 set -g default-terminal "screen-256color"
