updated Ag, FZF

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,14 +33,32 @@ setw -g mouse-resize-pane on
 
 # copy mode 
 setw -g mode-keys vi
-bind ` copy-mode
-unbind [
-unbind p
-bind p paste-buffer
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
-bind -t vi-copy Escape cancel
-bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+
+# -------------------------------------------------------------------
+# legacy tmux settings
+# -------------------------------------------------------------------
+#
+# bind ` copy-mode
+# unbind [
+# unbind p
+# bind p paste-buffer
+# bind -t vi-copy v begin-selection
+# bind -t vi-copy y copy-selection
+# bind -t vi-copy Escape cancel
+# bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+
+# -------------------------------------------------------------------
+# Bind Keys for pbcopy, tmux buffer copying w OSX clipboard
+# -------------------------------------------------------------------
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Bind ']' to use pbpaste
+bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 # History
 set-option -g history-limit 102400
