changed colorscheme to material, various fixes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,10 +26,14 @@ bind -n M-Down select-pane -D
 set -sg escape-time 1
 
 # set mouse mode 
+# (the following is deprecated in newest tmux)
 setw -g mode-mouse on
 setw -g mouse-select-window on
 setw -g mouse-select-pane on
 setw -g mouse-resize-pane on
+
+# for future tmux compat (experimental)
+# set-option -g mouse on
 
 # copy mode 
 setw -g mode-keys vi
