--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,10 +1,3 @@
-# enable OSX clipboard sharing
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-
-# tmux configuration file
-source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
-# source /Users/bivers/dotfiles/tmux/tmux_airline.conf
-
 # Set 256-color terminal
 set -g default-terminal "screen-256color"
 
@@ -22,34 +15,24 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# Renumber windows when a window is closed
+set-option -g renumber-windows on
+
 # quick reponses? 
 set -sg escape-time 1
 
-# set mouse mode 
-# (the following is deprecated in newest tmux)
-setw -g mode-mouse on
-setw -g mouse-select-window on
-setw -g mouse-select-pane on
-setw -g mouse-resize-pane on
-
 # for future tmux compat (experimental)
-# set-option -g mouse on
+set-option -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
+bind -t vi-copy    C-WheelUpPane   halfpage-up
+bind -t vi-copy    C-WheelDownPane halfpage-down
+bind -t emacs-copy C-WheelUpPane   halfpage-up
+bind -t emacs-copy C-WheelDownPane halfpage-down
 
 # copy mode 
 setw -g mode-keys vi
-
-# -------------------------------------------------------------------
-# legacy tmux settings
-# -------------------------------------------------------------------
-#
-# bind ` copy-mode
-# unbind [
-# unbind p
-# bind p paste-buffer
-# bind -t vi-copy v begin-selection
-# bind -t vi-copy y copy-selection
-# bind -t vi-copy Escape cancel
-# bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
 # -------------------------------------------------------------------
 # Bind Keys for pbcopy, tmux buffer copying w OSX clipboard
@@ -57,15 +40,25 @@ setw -g mode-keys vi
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Bind ']' to use pbpaste
-bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
-
 # History
 set-option -g history-limit 102400
+
+# -------------------------------------------------------------------
+# Window options
+# -------------------------------------------------------------------
+
+# Reload ~/.tmux.conf
+bind-key R source-file ~/.tmux.conf \; display-message "Reloaded!"
+
+# copy-mode
+set-window-option -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-pipe "pbcopy"
+
+# Capture pane and open in Vim
+bind-key C-c run 'tmux capture-pane -S -102400 -p > /tmp/tmux-capture.txt'\;\
+             new-window "view /tmp/tmux-capture.txt"
+bind-key M-c run "screencapture -l$(osascript -e 'tell app \"iTerm\" to id of window 1') -x -o -P /tmp/$(date +%Y%m%d-%H%M%S).png"
 
 # -------------------------------------------------------------------
 # fzf integration
@@ -77,3 +70,24 @@ bind-key -n 'M-t' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$
 # select-pane (@george-b)
 bind-key 0 run "tmux split-window -l 12 'bash -ci ftpane'"
 
+# -------------------------------------------------------------------
+# 24-bit Color
+# -------------------------------------------------------------------
+# https://sunaku.github.io/tmux-24bit-color.html
+set-option -ga terminal-overrides ",screen-256color:Tc"
+
+# -------------------------------------------------------------------
+# Statusline
+# -------------------------------------------------------------------
+set-option -g status-justify left
+set-option -g status-left '#[bg=colour9] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #h #[bg=colour236] '
+set-option -g status-left-length 16
+set-option -g status-bg colour0
+set-option -g status-right '#[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %b %d %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour9] '
+set-option -g status-interval 60
+
+set-option -g pane-active-border-fg colour240
+set-option -g pane-border-fg colour238
+
+set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239]#[fg=colour195]#F#[bg=colour238] '
+set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215] #I #[bg=colour235]#[fg=colour167] #[bg=colour234]#W#[bg=colour235]#[fg=colour195]#F#[bg=colour236] '
