--- a/misc/config/gocode/config.json
+++ b/misc/config/gocode/config.json
@@ -1,1 +1,1 @@
-{"propose-builtins":true,"lib-path":"/Users/bivers/Development/go/src/gitlab.imshealth.com/xfra/l0-cli/rest/:/Users/bivers/Development/go/src/gitlab.imshealth.com/xfra/layer0/api/","autobuild":false,"force-debug-output":""}
+{"propose-builtins":true,"lib-path":"/Users/bivers/Development/go/src/gitlab.imshealth.com/xfra/l0-cli/rest/:/Users/bivers/Development/go/src/gitlab.imshealth.com/xfra/layer0/api/","custom-pkg-prefix":"","custom-vendor-dir":"","autobuild":true,"force-debug-output":"","package-lookup-mode":"go","close-timeout":1800,"unimported-packages":true}
